catkin_ws/logs/backend/build.make.647.log.stderr
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:16:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:119:31: error: expected identifier before string constant
     cv::FileStorage fileStore("/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/keypoints.txt",cv::FileStorage::WRITE);
                               ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:119:31: error: expected ‘,’ or ‘...’ before string constant
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:120:32: error: expected identifier before string constant
     cv::FileStorage fileStore2("/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/keypoints2.txt",cv::FileStorage::WRITE);
                                ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:120:32: error: expected ‘,’ or ‘...’ before string constant
make[2]: *** [CMakeFiles/frontend.dir/src/Mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
